manifests/network-policies/exercicio.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intruso-to-backend
  namespace: backend
  labels:
    aula: "15-network-policies"
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: frontend
          podSelector:
            matchLabels:
              app: intruso
      ports:
        - protocol: TCP
          port: 8080
